// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CssGrid shots CSSGrid w/ whitespace 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 8px;
  margin-bottom: 8px;
  padding: 8px;
}

.c1 {
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row: 1;
  padding: 4px;
}

.c2 {
  grid-row-start: 2;
  grid-row-end: 4;
  grid-column: 1;
  padding: 8px;
}

.c3 {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  grid-area: content;
  width: 300px;
}

.c4 {
  grid-column: 4;
  grid-row: 2/3;
  grid-area: toolbar;
  padding: 1rem;
}

.c5 {
  grid-column: 1/4;
  grid-row: 4;
  grid-area: footer;
  padding: 20px;
}

<div
  class="c0"
  height="100%"
>
  <div
    class="c1"
  >
    header
  </div>
  <div
    class="c2"
  >
    sidebar
  </div>
  <div
    class="c3"
    width="300px"
  >
    content
  </div>
  <div
    class="c4"
  >
    toolbar
  </div>
  <div
    class="c5"
  >
    footer
  </div>
</div>
`;

exports[`CssGrid shots base 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ Item & templateAreas 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 50px 40% 40% 50px;
  grid-template-columns: 100px auto 100px;
  grid-template-areas: "header header header""sidebar content toolbar""sidebar content2 toolbar""footer footer2 footer3";
  height: 450px;
}

.c1 {
  grid-area: header;
  justify-self: start;
  -webkit-align-self: start;
  -ms-flex-item-align: start;
  align-self: start;
}

.c2 {
  grid-area: sidebar;
  height: 100px;
  max-height: 200px;
}

.c3 {
  grid-area: content;
  width: 300px;
}

.c4 {
  grid-area: content2;
  place-self: center center;
}

.c5 {
  grid-area: toolbar;
}

.c6 {
  grid-area: footer;
}

.c7 {
  grid-area: footer2;
}

.c8 {
  grid-area: footer3;
}

<div
  class="c0"
  height="450px"
>
  <div
    class="c1"
  >
    1
  </div>
  <div
    class="c2"
    height="100px"
  >
    2
  </div>
  <div
    class="c3"
    width="300px"
  >
    3
  </div>
  <div
    class="c4"
  >
    4
  </div>
  <div
    class="c5"
  >
    5
  </div>
  <div
    class="c6"
  >
    6
  </div>
  <div
    class="c7"
  >
    7
  </div>
  <div
    class="c8"
  >
    8
  </div>
</div>
`;

exports[`CssGrid shots w/ Item 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

.c1 {
  grid-column-start: 1;
  grid-column-end: 1;
  grid-row: 1;
}

.c2 {
  grid-row-start: 2;
  grid-row-end: 4;
  grid-column: 1;
}

.c3 {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  grid-area: content;
  width: 300px;
}

.c4 {
  grid-column: 4;
  grid-row: 2/3;
  grid-area: toolbar;
}

.c5 {
  grid-column: 1/4;
  grid-row: 4;
  grid-area: footer;
}

<div
  class="c0"
  height="100%"
>
  <div
    class="c1"
  >
    header
  </div>
  <div
    class="c2"
  >
    sidebar
  </div>
  <div
    class="c3"
    width="300px"
  >
    content
  </div>
  <div
    class="c4"
  >
    toolbar
  </div>
  <div
    class="c5"
  >
    footer
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: start;
  -ms-flex-line-pack: start;
  align-content: start;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: end;
  -ms-flex-line-pack: end;
  align-content: end;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 5`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: space-around;
  -ms-flex-line-pack: space-around;
  align-content: space-around;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 6`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: space-between;
  -ms-flex-line-pack: space-between;
  align-content: space-between;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignContent 7`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-content: space-evenly;
  -ms-flex-line-pack: space-evenly;
  align-content: space-evenly;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignItems 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignItems 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignItems 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ alignItems 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ autoFlow 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ autoFlow 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ autoFlow 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ autoFlow 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ dimensions 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100px;
  width: 500px;
  max-height: 300px;
  max-width: 1000px;
}

<div
  class="c0"
  height="100px"
  width="500px"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 4px;
  -webkit-column-gap: 4px;
  column-gap: 4px;
  row-gap: 4px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 8px;
  -webkit-column-gap: 8px;
  column-gap: 8px;
  row-gap: 8px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 12px;
  -webkit-column-gap: 12px;
  column-gap: 12px;
  row-gap: 12px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 16px;
  -webkit-column-gap: 16px;
  column-gap: 16px;
  row-gap: 16px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 5`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 20px;
  -webkit-column-gap: 20px;
  column-gap: 20px;
  row-gap: 20px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 6`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 24px;
  -webkit-column-gap: 24px;
  column-gap: 24px;
  row-gap: 24px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 7`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 28px;
  -webkit-column-gap: 28px;
  column-gap: 28px;
  row-gap: 28px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 8`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 32px;
  -webkit-column-gap: 32px;
  column-gap: 32px;
  row-gap: 32px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 9`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 36px;
  -webkit-column-gap: 36px;
  column-gap: 36px;
  row-gap: 36px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 10`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 40px;
  -webkit-column-gap: 40px;
  column-gap: 40px;
  row-gap: 40px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 11`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 44px;
  -webkit-column-gap: 44px;
  column-gap: 44px;
  row-gap: 44px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 12`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 48px;
  -webkit-column-gap: 48px;
  column-gap: 48px;
  row-gap: 48px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 13`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 52px;
  -webkit-column-gap: 52px;
  column-gap: 52px;
  row-gap: 52px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 14`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 56px;
  -webkit-column-gap: 56px;
  column-gap: 56px;
  row-gap: 56px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 15`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 60px;
  -webkit-column-gap: 60px;
  column-gap: 60px;
  row-gap: 60px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ gap 16`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
  gap: 64px;
  -webkit-column-gap: 64px;
  column-gap: 64px;
  row-gap: 64px;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ inline 1`] = `
.c0 {
  display: inline-grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: start;
  -webkit-justify-content: start;
  -ms-flex-pack: start;
  justify-content: start;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: end;
  -webkit-justify-content: end;
  -ms-flex-pack: end;
  justify-content: end;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: stretch;
  -webkit-justify-content: stretch;
  -ms-flex-pack: stretch;
  justify-content: stretch;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 5`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 6`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyContent 7`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyItems 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  justify-items: start;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyItems 2`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  justify-items: end;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyItems 3`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  justify-items: center;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ justifyItems 4`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  justify-items: stretch;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ placeContent 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  place-content: end space-between;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;

exports[`CssGrid shots w/ placeItems 1`] = `
.c0 {
  display: grid;
  grid-template-rows: 100px auto 50px;
  grid-template-columns: 100px auto 100px;
  place-items: center stretch;
  height: 100%;
}

<div
  class="c0"
  height="100%"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
  <div>
    3
  </div>
  <div>
    4
  </div>
  <div>
    5
  </div>
  <div>
    6
  </div>
  <div>
    7
  </div>
  <div>
    8
  </div>
  <div>
    9
  </div>
</div>
`;
